@@ -47,6 +47,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #17289: The readline module now plays nicer with external modules
+  or applications changing the rl_completer_word_break_characters global
+  variable.  Initial patch by Bradley Froehle.
+
 - Issue #12181: select module: Fix struct kevent definition on OpenBSD 64-bit
   platforms. Patch by Federico Schwindt.
 
